[gd_scene load_steps=8 format=3 uid="uid://xis4df8vo7uh"]

[ext_resource type="Script" path="res://GUI/Scripts/interface.gd" id="1_80bqf"]
[ext_resource type="PackedScene" uid="uid://cbk2exn6r7804" path="res://GUI/bar.tscn" id="1_icbkr"]
[ext_resource type="PackedScene" uid="uid://bswnjel8s066x" path="res://GUI/xp.tscn" id="2_ieqo2"]
[ext_resource type="Script" path="res://GUI/Scripts/healthbar.gd" id="3_5ychv"]
[ext_resource type="Texture2D" uid="uid://dojxepvfftip3" path="res://GUI/assets/GUI/label_HP_bg.png" id="5_s7m28"]
[ext_resource type="Script" path="res://GUI/Scripts/Level counter.gd" id="6_l6ehn"]
[ext_resource type="PackedScene" uid="uid://752hjmp66b0o" path="res://GUI/Coin counter.tscn" id="7_qh670"]

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_80bqf")

[node name="HP" parent="." instance=ExtResource("1_icbkr")]
layout_mode = 0
script = ExtResource("3_5ychv")

[node name="XP" parent="." instance=ExtResource("2_ieqo2")]
layout_mode = 0
offset_left = 3.0
offset_top = 56.0
offset_right = 503.0
offset_bottom = 109.0

[node name="NinePatchRect2" type="NinePatchRect" parent="XP/CenterContainer/HBoxContainer" index="2"]
custom_minimum_size = Vector2(76.96, 0)
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("5_s7m28")

[node name="Label" type="Label" parent="XP/CenterContainer/HBoxContainer/NinePatchRect2"]
layout_mode = 2
offset_left = 2.0
offset_top = 7.0
offset_right = 75.0
offset_bottom = 33.0
grow_horizontal = 0
grow_vertical = 2
text = "Level: 1"
horizontal_alignment = 1
script = ExtResource("6_l6ehn")

[node name="Coin counter" parent="." instance=ExtResource("7_qh670")]
layout_mode = 1
anchors_preset = -1
offset_left = 1535.0
offset_right = 1596.0
grow_horizontal = 0
metadata/_edit_use_anchors_ = true

[connection signal="exp_change" from="." to="XP" method="_on_interface_exp_change"]
[connection signal="health_changed" from="." to="HP" method="_on_interface_health_changed"]
[connection signal="levelup" from="." to="XP/CenterContainer/HBoxContainer/NinePatchRect2/Label" method="_on_interface_levelup"]
[connection signal="max_exp_change" from="." to="XP" method="_on_interface_max_exp_change"]
[connection signal="max_health_changed" from="." to="HP" method="_on_interface_max_health_changed"]

[editable path="HP"]
[editable path="XP"]
